# ToDo_ListCli

./: .gitignore  CMakeLists.txt  README.md
include/: command.h  repository.h  taskdata.h
src/: command.cpp  main.cpp  repository.cpp  taskdata.cpp
